syntax = "proto3";

import "shared.proto";

package pganalyze.collector;
option go_package = "github.com/pganalyze/collector/output/pganalyze_collector";

message CompactSystemSnapshot {
  System system = 1;
}
